Limited the number of frame that get transformed (.avalona-inner-frame) to 1

--- a/assets/css/style.sass
+++ b/assets/css/style.sass
@@ -5,12 +5,18 @@ html
 #frame-3d
   width: 600px
   height: 350px
-  margin: 10% auto 0 auto
+  margin: 5% auto 0 auto
   border: rgba(red, .5) dashed 1px
 
   & > div
     background-color: rgba(blue, .05)
     border: darkblue dashed 1px
+
+.blue-boy
+  background-color: rgba(blue, .75)
+
+.avalona-inner-frame
+  border: green dashed 1px
 
 #rectangle
   position: relative
