--- a/assets/css/style.sass
+++ b/assets/css/style.sass
@@ -2,10 +2,14 @@
 html
   height: 100%
 
+body
+  height: 100%
+  padding-top: 5%
+
 #frame-3d
   width: 600px
   height: 350px
-  margin: 5% auto 0 auto
+  margin: 0 auto 0 auto
   border: rgba(red, .5) dashed 1px
 
   & > div
