Add methods to refresh 3d frame: e.g. on start(), 3d frame and transformed frame get fetched from the dom and setup

--- a/assets/css/style.sass
+++ b/assets/css/style.sass
@@ -6,10 +6,18 @@ body
   height: 100%
   padding: 15px
 
+#start
+  display: block
+  margin: 0 auto 15px auto
+
+#shuffle-all,
+#shuffle-one
+  display: none
+
 #frame-3d
   width: 600px
   height: 350px
-  margin: 0 auto 0 auto
+  margin: 0 auto
   border: rgba(red, .5) dashed 1px
 
   & > div
