- Added enable / disable features

--- a/assets/css/style.sass
+++ b/assets/css/style.sass
@@ -6,8 +6,14 @@ body
   height: 100%
   padding: 15px
 
-#start
+#enable
   display: block
+
+#disable
+  display: none
+
+#enable,
+#disable
   margin: 0 auto 15px auto
 
 #shuffle-all,
