- Added test to make sure that "flatten" method doesn't con flit with others AvalonA objects

--- a/assets/css/style.sass
+++ b/assets/css/style.sass
@@ -6,10 +6,14 @@ body
   height: 100%
   padding: 15px
 
-#enable
+#enable,
+#enable2,
+#enable3
   display: block
 
-#disable
+#disable,
+#disable2,
+#disable3
   display: none
 
 #enable,
@@ -95,3 +99,19 @@ body
   border-radius: 50%
   border: #666 solid 1px
   +box-shadow(0 0 10px 3px rgba(#000, .5))
+
+.a3d2
+  width: 250px
+  height: 250px
+  background-color: darkseagreen
+  margin: -100px 0 0 100px
+
+  div
+    background-color: seagreen
+    width: 250px
+    height: 250px
+
+    div
+      background-color: lightseagreen
+      width: 100px
+      height: 100px
