--- a/assets/css/style.sass
+++ b/assets/css/style.sass
@@ -100,7 +100,7 @@ body
   border: #666 solid 1px
   +box-shadow(0 0 10px 3px rgba(#000, .5))
 
-.a3d2
+#a3d2
   width: 250px
   height: 250px
   background-color: darkseagreen
