- Made sure that AvalonA.disable() reset "transformed layer" rotation even when node is hidden - Updated binaries

--- a/assets/css/style.sass
+++ b/assets/css/style.sass
@@ -8,16 +8,20 @@ body
 
 #enable,
 #enable2,
-#enable3
+#enable3,
+#hide
   display: block
 
 #disable,
 #disable2,
-#disable3
+#disable3,
+#show
   display: none
 
 #enable,
-#disable
+#disable,
+#hide,
+#show
   margin: 0 auto 15px auto
 
 #shuffle-all,
