--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -53,22 +53,34 @@ a {
       margin-top: 1rem;
       margin-left: 0; } }
 
-.page-header {
+.page-header,
+.preview {
   color: #fff;
   text-align: center;
-  background-color: #159957;
-  background-image: linear-gradient(120deg, #155799, #159957); }
+  background-color: #000055;
+}
+
+ .page-header{
+   background-image: linear-gradient(rgba(0,0,85,0) 50%, rgba(51,51,51,0), #333), url(/images/stars.png), linear-gradient(#000055, #333);
+ }
+
+ .preview{
+   background-image: linear-gradient(#333, #000);
+ }
 
 @media screen and (min-width: 64em) {
-  .page-header {
+  .page-header,
+  .preview {
     padding: 5rem 6rem; } }
 
 @media screen and (min-width: 42em) and (max-width: 64em) {
-  .page-header {
+  .page-header,
+  .preview {
     padding: 3rem 4rem; } }
 
 @media screen and (max-width: 42em) {
-  .page-header {
+  .page-header,
+  .preview {
     padding: 2rem 1rem; } }
 
 .project-name {
