--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -57,15 +57,15 @@ a {
 .preview {
   color: #fff;
   text-align: center;
-  background-color: #000055;
 }
 
  .page-header{
-   background-image: linear-gradient(rgba(0,0,85,0) 50%, rgba(51,51,51,0), #333), url(/images/stars.png), linear-gradient(#000055, #333);
+   background-color: #000055;
+   background-image: linear-gradient(rgba(0,0,85,0) 50%, rgba(26,26,26,0), #1a1a1a), url(/images/stars.png), linear-gradient(#000055, #1a1a1a);
  }
 
  .preview{
-   background-image: linear-gradient(#333, #000);
+   background-color: #1a1a1a;
  }
 
 @media screen and (min-width: 64em) {
