--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -124,7 +124,27 @@ a {
   margin-top: 2rem;
   margin-bottom: 1rem;
   font-weight: normal;
-  color: #159957; }
+  color: #000055; }
+
+.main-content h1 {
+  font-size: 3.1rem;
+}
+.main-content h2 {
+  font-size: 2.75rem;
+}
+.main-content h3 {
+  font-size: 2.4rem;
+}
+.main-content h4 {
+  font-size: 2.05rem;
+}
+.main-content h5 {
+  font-size: 1.7rem;
+}
+.main-content h6 {
+  font-size: 1.35rem;
+}
+
 .main-content p {
   margin-bottom: 1em; }
 .main-content code {
