--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -15,6 +15,10 @@ a {
   a:hover {
     text-decoration: underline; }
 
+p {
+  text-align: justify;
+}
+
 .btn {
   display: inline-block;
   margin-bottom: 1rem;
