--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -15,6 +15,10 @@ a {
   a:hover {
     text-decoration: underline; }
 
+.site-footer a {
+  color: #3f8cb8;
+}
+
 p {
   text-align: justify;
 }
@@ -284,23 +288,47 @@ p {
 .site-footer {
   padding-top: 2rem;
   margin-top: 2rem;
-  border-top: solid 1px #eff0f1; }
+  text-align: center;
+  color: #fff;
+  background-color: #000055;
+  background-image: linear-gradient(#1a1a1a, rgba(26,26,26,0) 50%, rgba(0,0,85,0)), url(../images/stars.png), linear-gradient(#1a1a1a, #000055);
+}
 
 .site-footer-owner {
-  display: block;
-  font-weight: bold; }
+  display: block; }
 
 .site-footer-credits {
-  color: #819198; }
+  color: #617178; }
 
 @media screen and (min-width: 64em) {
   .site-footer {
-    font-size: 1rem; } }
+    font-size: 1rem;
+    padding: 5rem 6rem;
+  }
+
+  .site-footer-credits {
+    font-size: 0.8rem
+  }
+}
 
 @media screen and (min-width: 42em) and (max-width: 64em) {
   .site-footer {
-    font-size: 1rem; } }
+    font-size: 1rem;
+    padding: 3rem 4rem;
+  }
+
+  .site-footer-credits {
+    font-size: 0.8rem
+  }
+}
 
 @media screen and (max-width: 42em) {
   .site-footer {
-    font-size: 0.9rem; } }
+    font-size: 0.9rem;
+    padding: 2rem 1rem;
+  }
+
+  .site-footer-credits {
+    font-size: 0.7rem
+  }
+}
