--- a/assets/css/style.sass
+++ b/assets/css/style.sass
@@ -1,3 +1,5 @@
+@import normalize
+@import bourbon
 
 html
   height: 100%
@@ -51,7 +53,7 @@ body
   padding: .75%
   border-radius: 7px
   border: #666 solid 1px
-  +box-shadow(0 0 10px 3px rgba(#000, .5))
+  box-shadow: 0 0 10px 3px rgba(#000, .5)
   opacity: .85
   //+backface-visibility(hidden)
 
@@ -77,7 +79,7 @@ body
   height: 150px
   border-radius: 7px
   border: #666 solid 1px
-  +box-shadow(0 0 10px 3px rgba(#000, .5))
+  box-shadow: 0 0 10px 3px rgba(#000, .5)
   +transform(rotateZ(45deg))
   //+backface-visibility(hidden)
 
@@ -90,7 +92,7 @@ body
   height: 75px
   border-radius: 5px
   border: #666 solid 1px
-  +box-shadow(0 0 10px 3px rgba(#000, .5))
+  box-shadow: 0 0 10px 3px rgba(#000, .5)
   +transform(rotateZ(-30deg))
   //+backface-visibility(hidden)
 
@@ -104,7 +106,7 @@ body
   height: 130px
   border-radius: 50%
   border: #666 solid 1px
-  +box-shadow(0 0 10px 3px rgba(#000, .5))
+  box-shadow: 0 0 10px 3px rgba(#000, .5)
   //+backface-visibility(hidden)
 
 #a3d2
