--- a/assets/css/style.sass
+++ b/assets/css/style.sass
@@ -61,6 +61,7 @@ body
   width: 100%
   height: 130px
   overflow: scroll
+  //+backface-visibility(hidden)
 
 #half-circle
   margin: -50px 0 0 -50px
