--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -352,7 +352,18 @@ p {
   text-align: center;
   color: #fff;
   background-color: #000055;
-  background-image: linear-gradient(#1a1a1a, rgba(26,26,26,0) 50%, rgba(0,0,85,0)), url(../images/stars.png), linear-gradient(#1a1a1a, #000055);
+}
+
+@media screen and (min-width: 42em) {
+  .site-footer{
+    background-image: linear-gradient(#1a1a1a, rgba(26,26,26,0) 50%, rgba(0,0,85,0)), url(../images/stars.png), linear-gradient(#1a1a1a, #000055);
+  }
+}
+
+@media screen and (max-width: 42em) {
+  .site-footer{
+    background-image: linear-gradient(#1a1a1a, rgba(26,26,26,0) 50%, rgba(0,0,85,0)), url(../images/stars-sd.png), linear-gradient(#1a1a1a, #000055);
+  }
 }
 
 .site-footer-owner {
