--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -410,13 +410,43 @@ p {
 }
 
 
-.black-hole{
+.black-hole,
+.group-hole,
+.portfolio-stand {
   width: 100%;
+}
+
+.portfolio-stand {
+  height: 100%;
+}
+
+.portfolio {
+  width: 30%;
+  height: 21.2142857%;
+  margin: 39.3928572% auto;
+}
+
+.front-cover{
+  width: 100%;
+  height: 100%;
+  background-color: seagreen;
+
+  background-image: linear-gradient(to bottom, rgba(0,0,0,0.35), rgba(0,0,0,0)),
+    linear-gradient(45deg, rgba(0, 0, 85, 0) 93%, rgba(0, 0, 85, 0.6) 93.5%),
+    linear-gradient(-45deg, rgba(0, 0, 85, 0) 93%, rgba(0, 0, 85, 0.6) 93.5%),
+    linear-gradient(to bottom, rgba(0, 0, 85, 0) 91.5%, rgba(0, 0, 85, 0.6) 92%);
+
+  border-radius: 0.35rem 0.35rem 0.2rem 0.2rem;
+
+  box-shadow: inset 0 -0.15rem 0.15rem rgba(255, 255, 255, 0.2),
+    inset 0 0.1rem 0.1rem rgba(0, 0, 0, 0.2);
+}
+
+.black-hole{
   border-radius: 40%;
 }
 
 .group-hole {
-  width: 100%;
   z-index: -1;
 }
 
@@ -433,7 +463,8 @@ p {
 }
 
 .group-hole,
-.group-hole .black-hole:not(:first-child) {
+.group-hole .black-hole:not(:first-child),
+.portfolio-stand {
   position: absolute;
   top: 0;
   left: 0;
