--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -438,8 +438,10 @@ p {
 
   border-radius: 0.35rem 0.35rem 0.2rem 0.2rem;
 
-  box-shadow: inset 0 -0.15rem 0.15rem rgba(255, 255, 255, 0.2),
-    inset 0 0.1rem 0.1rem rgba(0, 0, 0, 0.2);
+  box-shadow: inset -0.08rem 0 0.08rem rgba(255, 255, 255, 0.2),
+    inset 0.08rem 0 0.08rem rgba(255, 255, 255, 0.2),
+    inset 0 0.1rem 0.1rem rgba(0, 0, 0, 0.35),
+    inset 0 -0.15rem 0.15rem rgba(255, 255, 255, 0.2);
 }
 
 .black-hole{
