--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -426,22 +426,39 @@ p {
   margin: 39.3928572% auto;
 }
 
-.front-cover{
+.front-cover,
+.outer-cover {
   width: 100%;
   height: 100%;
+}
+
+.outer-cover{
+  border-radius: 0.35rem 0.35rem 0.2rem 0.2rem;
+
   background-color: seagreen;
 
   background-image: linear-gradient(to bottom, rgba(0,0,0,0.35), rgba(0,0,0,0)),
     linear-gradient(45deg, rgba(0, 0, 85, 0) 93%, rgba(0, 0, 85, 0.6) 93.5%),
     linear-gradient(-45deg, rgba(0, 0, 85, 0) 93%, rgba(0, 0, 85, 0.6) 93.5%),
-    linear-gradient(to bottom, rgba(0, 0, 85, 0) 91.5%, rgba(0, 0, 85, 0.6) 92%);
-
-  border-radius: 0.35rem 0.35rem 0.2rem 0.2rem;
+    linear-gradient(to bottom, rgba(0, 0, 85, 0) 91.5%, rgba(0, 0, 85, 0.6) 92%),
+    url(../images/portfolio-pattern.png);
 
   box-shadow: inset -0.08rem 0 0.08rem rgba(255, 255, 255, 0.2),
     inset 0.08rem 0 0.08rem rgba(255, 255, 255, 0.2),
     inset 0 0.1rem 0.1rem rgba(0, 0, 0, 0.35),
     inset 0 -0.15rem 0.15rem rgba(255, 255, 255, 0.2);
+}
+
+@media screen and (min-width: 42em) {
+  .outer-cover {
+    background-size: auto, auto, auto, auto, 10vw;
+  }
+}
+
+@media screen and (max-width: 42em) {
+  .outer-cover {
+    background-size: auto, auto, auto, auto, 20vw;
+  }
 }
 
 .black-hole{
