--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -424,29 +424,75 @@ p {
   width: 30%;
   height: 21.2142857%;
   margin: 39.3928572% auto;
+  position: relative;
 }
 
 .front-cover,
-.outer-cover {
+.outer-cover,
+.inner-cover,
+.back-cover {
   width: 100%;
   height: 100%;
 }
 
+.back-cover {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
 .outer-cover{
-  border-radius: 0.35rem 0.35rem 0.2rem 0.2rem;
-
   background-color: seagreen;
-
-  background-image: linear-gradient(to bottom, rgba(0,0,0,0.35), rgba(0,0,0,0)),
-    linear-gradient(45deg, rgba(0, 0, 85, 0) 93%, rgba(0, 0, 85, 0.6) 93.5%),
-    linear-gradient(-45deg, rgba(0, 0, 85, 0) 93%, rgba(0, 0, 85, 0.6) 93.5%),
-    linear-gradient(to bottom, rgba(0, 0, 85, 0) 91.5%, rgba(0, 0, 85, 0.6) 92%),
-    url(../images/portfolio-pattern.png);
 
   box-shadow: inset -0.08rem 0 0.08rem rgba(255, 255, 255, 0.2),
     inset 0.08rem 0 0.08rem rgba(255, 255, 255, 0.2),
     inset 0 0.1rem 0.1rem rgba(0, 0, 0, 0.35),
     inset 0 -0.15rem 0.15rem rgba(255, 255, 255, 0.2);
+}
+
+@media screen and (min-width: 42em) {
+  .outer-cover{
+    background-image: linear-gradient(to bottom, rgba(0,0,0,0.2), rgba(255,255,255,0.2)),
+      linear-gradient(45deg, rgba(0, 0, 85, 0) 93%, rgba(25, 25, 75, 1) 93.5%),
+      linear-gradient(-45deg, rgba(0, 0, 85, 0) 93%, rgba(25, 25, 75, 1) 93.5%),
+      linear-gradient(to bottom, rgba(0, 0, 85, 0) 91.5%, rgba(25, 25, 75, 1) 92%),
+      url(../images/portfolio-pattern.png);
+  }
+}
+
+@media screen and (max-width: 42em) {
+  .outer-cover{
+    background-image: linear-gradient(to bottom, rgba(0,0,0,0.2), rgba(255,255,255,0.2)),
+      linear-gradient(45deg, rgba(0, 0, 85, 0) 93%, rgba(25, 25, 75, 1) 93.5%),
+      linear-gradient(-45deg, rgba(0, 0, 85, 0) 93%, rgba(25, 25, 75, 1) 93.5%),
+      linear-gradient(to bottom, rgba(0, 0, 85, 0) 91.5%, rgba(25, 25, 75, 1) 92%),
+      url(../images/portfolio-pattern-sd.png);
+  }
+}
+
+.outer-cover,
+.inner-cover {
+  border-radius: 0.35rem 0.35rem 0.2rem 0.2rem;
+}
+
+.hide-back {
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+.inner-cover {
+  background-color: antiquewhite;
+
+  background-image: linear-gradient(to top, rgba(0,0,0,0.2), rgba(255,255,255,0.2)),
+    linear-gradient(45deg, rgba(0, 0, 85, 0) 93%, rgba(25, 25, 75, 1) 93.5%),
+    linear-gradient(-45deg, rgba(0, 0, 85, 0) 93%, rgba(25, 25, 75, 1) 93.5%),
+    linear-gradient(to right, seagreen 3%, rgba(46,139,87, 0) 3.5%),
+    linear-gradient(to left, seagreen 3%, rgba(46,139,87, 0) 3.5%),
+    linear-gradient(to bottom, seagreen 4.5%, rgba(46,139,87, 0) 5%);
+
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 @media screen and (min-width: 42em) {
