--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -471,7 +471,7 @@ p {
 .portfolio {
   width: 30%;
   height: 21.2142857%;
-  margin: 39.3928572% auto;
+  margin: 28.7857143% auto 0 auto;
   position: relative;
 }
 
@@ -480,10 +480,14 @@ p {
 .outer-cover,
 .inner-cover,
 .back-cover,
-.sheet,
 .page {
   width: 100%;
   height: 100%;
+}
+
+.sheet {
+  width: 97%;
+  height: 96%;
 }
 
 .back-cover,
