Hid vertical scrollbars

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -31,6 +31,12 @@
 
 html {
   overflow-x: hidden;
+  overflow-y: -moz-scrollbars-none;
+  -ms-overflow-style: none;
+}
+
+html::-webkit-scrollbar {
+  width: 0;
 }
 
 body {
