--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -31,7 +31,6 @@
 
 html {
   overflow-x: hidden;
-  overflow-y: -moz-scrollbars-none;
   -ms-overflow-style: none;
 }
 
@@ -486,14 +485,17 @@ p {
 .outer-cover,
 .inner-cover,
 .back-cover,
-.page {
+.back.page{
   width: 100%;
   height: 100%;
 }
 
+.front.page {
+  width: 100%;
+}
+
 .sheet {
-  width: 97%;
-  height: 96%;
+  width: 90%;
 }
 
 .back-cover,
@@ -505,10 +507,8 @@ p {
 }
 
 .page{
-  background-color: whitesmoke;
-
-  /* DEBUG */
-  color: black;
+  background-color: floralwhite;
+  color: dimgray;
 }
 
 .outer-cover{
