--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -455,6 +455,11 @@ p {
   -webkit-user-select: none;
 }
 
+.lightfx{
+  pointer-events: none;
+}
+
+
 /**** common ****/
 
 .hide-back {
@@ -466,8 +471,19 @@ p {
   visibility: hidden;
 }
 
-.lightfx{
-  pointer-events: none;
+.expand {
+  width: 100%;
+  height: 100%;
+}
+
+.absolute {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.transluent{
+  opacity: 0.93;
 }
 
 
@@ -480,30 +496,9 @@ p {
   position: relative;
 }
 
-.portfolio-stand,
-.front-cover,
-.outer-cover,
-.inner-cover,
-.back-cover,
-.back.page{
-  width: 100%;
-  height: 100%;
-}
-
 .front.page {
-  max-width: 100%;
-}
-
-.sheet {
-  width: 90%;
-}
-
-.back-cover,
-.sheet,
-.back {
-  position: absolute;
-  top: 0;
-  left: 0;
+  max-height: 100%;
+  max-width: 90%;
 }
 
 .page{
@@ -556,10 +551,6 @@ p {
     linear-gradient(to right, #246f45 3%, rgba(36,111,69, 0) 3.5%),
     linear-gradient(to left, #246f45 3%, rgba(36,111,69, 0) 3.5%),
     linear-gradient(to bottom, #246f45 4.5%, rgba(36,111,69, 0) 5%);
-
-  position: absolute;
-  top: 0;
-  left: 0;
 }
 
 @media screen and (min-width: 42em) {
@@ -575,13 +566,12 @@ p {
 }
 
 
+/**** black hole ****/
+
 .black-hole,
 .group-hole {
   width: 100%;
 }
-
-
-/**** black hole ****/
 
 .black-hole{
   border-radius: 40%;
@@ -601,14 +591,6 @@ p {
   .black-hole{
     background-image: url(../images/stars-sd.png);
   }
-}
-
-.group-hole,
-.group-hole .black-hole:not(:first-child),
-.portfolio-stand {
-  position: absolute;
-  top: 0;
-  left: 0;
 }
 
 .root.black-hole{
