--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -482,6 +482,20 @@ p {
   left: 0;
 }
 
+.animated {
+  transition-duration: 0.35s;
+  transition-timing-function: ease-in-out;
+
+  transition-property: color,
+    background-color,
+    opacity,
+    visibility,
+    margin,
+    padding,
+    height,
+    width;
+}
+
 
 /**** portfolio ****/
 
