--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -489,8 +489,8 @@ p {
 }
 
 .shrink {
-  -webkit-transform: scaleX(0) scaleY(0);
-  transform: scaleX(0) scaleY(0);
+  -webkit-transform: scaleX(0) scaleY(0) scaleZ(0);
+  transform: scaleX(0) scaleY(0) scaleZ(0);
 }
 
 
