• Added freeze() / release() • Test freeze / release all

--- a/assets/css/style.sass
+++ b/assets/css/style.sass
@@ -8,6 +8,8 @@ body
   height: 100%
   padding: 15px
 
+#release,
+#freeze,
 #enable,
 #enable2,
 #enable3,
@@ -20,6 +22,8 @@ body
 
 #enable,
 #disable,
+#release,
+#freeze,
 #hide,
 #show
   margin: 0 auto 15px auto
