Tested freeze() / release() single

--- a/assets/css/style.sass
+++ b/assets/css/style.sass
@@ -9,7 +9,11 @@ body
   padding: 15px
 
 #release,
+#release2,
+#release3,
 #freeze,
+#freeze2,
+#freeze3,
 #enable,
 #enable2,
 #enable3,
@@ -23,10 +27,22 @@ body
 #enable,
 #disable,
 #release,
+#release2,
+#release3,
 #freeze,
+#freeze2,
+#freeze3,
 #hide,
 #show
   margin: 0 auto 15px auto
+
+#release2,
+#release3,
+#freeze2,
+#freeze3
+  background: #1d83fb
+  border: solid 1px darkblue
+  color: white
 
 #shuffle-all,
 #shuffle-one
