--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -673,21 +673,33 @@ p {
   z-index: -4;
 }
 
-/**** overlay ****/
+/**** halo ****/
 
-.preview::before {
+.preview::after {
   content: "";
   position: absolute;
-  width: 50%;
+  transition-property: opacity visibility transform;
+  transition-duration: 3.25s;
+  transition-timing-function: cubic-bezier(.35,.5,.51,.66);
+  z-index: 2;
   max-width: 412px;
-  height: 50%;
   max-height: 412px;
   top: 50%;
   left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  z-index: 1;
+  width: 50%;
+  height: 50%;
   background: url(../images/halo.png) no-repeat;
   background-position: center center;
   background-size: auto 100%;
+  opacity: 0;
+  visibility: hidden;
+  -webkit-transform: translate(-50%, -100%);
+  transform: translate(-50%, -100%);
+}
+
+.halo::after {
+  opacity: 1;
+  visibility: visible;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 }
