--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -711,7 +711,8 @@ p {
 
 .preview::after {
   z-index: 2;
-  width: 2px;
+  min-width: 2px;
+  width: 0.175vw;
   height: 20vh;
   border-radius: 50%;
   box-shadow: 0 3px 2px rgba(255,255,255,0.75);
