--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -472,6 +472,10 @@ p {
   visibility: hidden;
 }
 
+.no-opacity {
+  opacity: 0;
+}
+
 .expand {
   width: 100%;
   height: 100%;
@@ -738,4 +742,22 @@ p {
   visibility: hidden;
   -webkit-transform: scaleY(1) translate(-50%, -100%);
   transform: scaleY(1) translate(-50%, -100%);
+}
+
+
+/**** overlay ****/
+
+.overlay {
+  position: absolute;
+  left: 0;
+  top: -50vh;
+  width: 100%;
+  height: calc(100% + 50vh);
+  z-index: 3;
+
+  background-image: linear-gradient(
+    rgba(0,0,0,0),
+    rgba(0,0,0,0.75) 33%,
+    #000
+  );
 }
